# octave-forge

./: .cvsignore  AUTHORS  COPYING  ChangeLog  INDEX  INSTALL  INSTALL.MacOSX  INSTALL.WINDOWS  Makeconf.base  Makefile  README  RELEASE-NOTES  TODO  autogen.sh  batch_test.m  configure.base  cvs-tree  get_authors  get_contents  interact_test.m  octinst.sh.in  pkg.mk  release.sh  template.readme  texinfo.tex
FIXES/: CONTENTS  CmplxQR.cc  CmplxQRP.cc  Makeconf.add  Makefile  MersenneTwister.h  README  configure.add  contour.m  cross.m  dbleQR.cc  dbleQRP.cc  deblank.m  fftfilt.m  findstr.m  freqz.m  freqz_plot.m  fsolve.cc  grid.m  hankel.m  hilb.m  imagesc.m  index.m  invhilb.m  kron.cc  kron.m  lin2mu.m  logm.cc  mu2lin.m  oct-sort.cc  oct-sort.h  polyder.m  polyderiv.m  qrtest.m  rand.cc  randgamma.c  randmtzig.c  randpoisson.c  rindex.m  sort.cc  (+10 more)
FIXES/test/: fsolve_3.m  testsort.m
admin/: add_copyR_header  build-www.py  check_INDEX.pl  compare_md5sum  copyright_fix.pl  cvsdir.sh  diacritical  find_changes  get-base-address  get_authors  get_contents  list_inactive_users.pl  main.idx  make_index  make_rpm  make_rpmmeta  meta_template.in  mkdoc  mkpkgadd  mktests.sh  mktexi  new_developer.html  octave.xml  octlang  qhull.spec  release.sh  releasePKG.m  replace_copyR_header  rpm_template.in  run_forge  runpath.sh  split_docstrings  subpkg_collector.pl  template.ndev  template.readme  template.rpm
admin/MacOSX/: README.txt
admin/RPM/: .cvsignore  README  configure.add  octave-forge.spec.in  qhull.spec  update_spec.sh
admin/Windows/: .cvsignore  Makefile  README  README-1st  bsubst.c  config_octave.sh  donation.txt  install_octave.sh  mkstdc++dll.sh  octave-install-win32.nsi  octave.nsi  start_octave.sh
admin/Windows/msvc/libs/glob/: Makefile.in  configure.in  configure.vc  glob.c
admin/langfiles/: octave.php  printAllBuiltins.m
doc/: .cvsignore  CONTENTS  Doxyfile  Makefile  Octave_Windows.htm  README  compatibility.html  doxygen_mainpage.cc  htmlfooter.htm  htmlheader.htm  index.html  javascript.jsin  macros.m4  macros.m4.in  octave-forge-home.html
doc/coda/: .cvsignore  Makefile  bibliography.sgml  coda.sgml
doc/htdocs/: .cvsignore  .svnignore  ChangeLog  FAQ.in  NEWS.in  archive.in  bugs.in  docs.in  index.in  links.in  octave-forge.css  packages.in  robots.txt  translation.in
extra/: CONTENTS  Makefile
extra/MacOSX/: DESCRIPTION  Makefile  OFSndPlay.cc  README  figure.m  image.m
extra/NaN/: DESCRIPTION  INDEX  INSTALL  NEWS  README.TXT  center.m  changelog.txt  coefficient_of_variation.m  conv2nan.m  cor.m  corrcoef.m  cov.m  covm.m  detrend.m  flag_implicit_dimension.m  flag_implicit_significance.m  flag_implicit_skip_nan.m  flag_implicit_unbiased_estim.m  geomean.m  harmmean.m  kurtosis.m  mad.m  mean.m  meandev.m  meansq.m  median.m  mod.m  moment.m  naninsttest.m  nanstd.m  nantest.m  normcdf.m  norminv.m  normpdf.m  percentile.m  quantile.m  rankcorr.m  ranks.m  rem.m  rms.m  (+16 more)
extra/Windows/: .cvsignore  DESCRIPTION  INDEX  Makefile  PKG_ADD  dos.m  grab.cc  grab_win32part.cc  image.m  isunix.m  unix.m  win32api.cc  win32api_win32part.cc
extra/ad/: COPYING  DESCRIPTION  INDEX  Makefile  PKG_ADD
extra/bugfix-3.0.5/: DESCRIPTION  INDEX
language/: CONTENTS  Makefile
main/: CONTENTS  INDEX  Makefile  release.sh
main/database-postgresql/src/: __pq_connect__.cc  command.cc  configure  configure.ac  converters.cc  converters.h  pq_close.cc  pq_connection.h  pq_exec.cc  pq_update_types.cc
main/database/src/: Makeconf.in  Makefile  Makefile.in  README  __pq_connect__.cc  __pq_internal_exit__.cc  command.cc  command.h  config.h.in  configure.ac  configure.base  converters.cc  converters.h  converters_arr_comp.cc  error-helpers.cc  error-helpers.h  generic_db.h  libpq-fe_filtered.h  mysql.i  mysql_filtered.h  mysql_wrap.cpp  odbc.i  odbc_wrap.cpp  pg_type_filtered.h  postgres.i  postgres_wrap.cpp  pq_close.cc  pq_connection.cc  pq_connection.h  pq_conninfo.cc  pq_exec.cc  pq_lo.cc  pq_update_types.cc  sqlext_filtered.h  sqlite3.i  sqlite3_filtered.h  sqlite3_wrap.cpp  sqltypes_filtered.h  wrap_endian.h
main/database/src/tests/: helpers.m  mysql_basic.m  mysql_high.m  odbc_basic.m  odbc_high.m  postgres_basic.m  postgres_high.m  sqlite_basic.m  sqlite_high.m
main/octgpr/src/: ChangeLog  Makefile  Makefile.in  config.h  config.h.in  config.status  configure  configure.base  configure.in  corrf.f  dgesum.f  dscrot.f  dscsev.f  dsdacc.f  dspmid.f  dsumsq.f  dtr2tp.f  dwdis2.f  dxnrm2.f  forsubs.h  get_corrf.c  gpr_predict.cc  gpr_train.cc  gprmod.h  infgpr.f  infpgp.f  nl0gpr.f  nl0pgp.f  nldgpr.f  nldpgp.f  nllgpr.f  nllpgp.f  optdrv.f  pakgpr.f  pakpgp.f  pdist2_mw.cc  pgp_predict.cc  pgp_train.cc  predict.c  setup.c  (+7 more)
main/parallel/src/: Makefile  Makefile.in  __bw_is_locked__.cc  __bw_lock_file__.cc  __bw_prcv__.cc  __bw_psend__.cc  __bw_unlock_file__.cc  __internal_exit__.cc  config.h.in  configure.ac  connect.cc  pserver.cc  recv.cc  reval.cc  sclose.cc  select.cc  select_sockets.cc  send.cc  sock-stream.cc  sock-stream.h  swab.h
nonfree/: CONTENTS  Makefile
nonfree/gpc/: .cvsignore  AUTHORS  ChangeLog  DESCRIPTION  INDEX  Makefile.am  NEWS  README  acinclude.m4  bootstrap.sh  configure.in  gpc_clip.cc  gpc_create.cc  gpc_get.cc  gpc_is_polygon.cc  gpc_plot.m  gpc_read.cc  gpc_tristrip.cc  gpc_write.cc  octave-gpc.cc  octave-gpc.h
nonfree/gpc/debian/: .cvsignore  changelog  control  copyright  gpc_test.m  rules
nonfree/gpc/doc/: ChangeLog  NEWS
nonfree/gpc/inst/: gpc_plot.m
nonfree/gpc/src/: .cvsignore  .svnignore  Makefile.am  acinclude.m4  autogen.sh  configure.in  gpc_clip.cc  gpc_create.cc  gpc_get.cc  gpc_is_polygon.cc  gpc_read.cc  gpc_tristrip.cc  gpc_write.cc  octave-gpc.cc  octave-gpc.h
www/: .cvsignore  Doxyfile  FAQ.in  Makefile  NEWS.in  archive.in  bugs.in  build-www.py  cleanup.sh  developers.in  docs.in  doxygen.css  doxygen_mainpage.cc  get-base-address  get_current_date.sh  htmlfooter.htm  htmlheader.html  index.in  javascript.jsin  links.in  macros.m4  octave-forge.css  package.css  packages.in  translation.in
(+12042 files in other folders)
