## Copyright (C) 2008  Jaroslav Hajek   <highegg@gmail.com>
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2 of the License, or
## (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software
## Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  
## 02110-1301  USA 

#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(OctGPR, 1.1.0, highegg@gmail.com)

# check for mkoctfile
AC_CHECK_PROG(MKOCTFILE,mkoctfile,mkoctfile)
if test -z $MKOCTFILE ; then
	AC_MSG_ERROR("mkoctfile not found. Perhaps you do not have octave installed?")
fi

# get preferred compilers
F77=`$MKOCTFILE -p FC`
CC=`$MKOCTFILE -p CC`
# get preferred flags
FFLAGS=`$MKOCTFILE -p FFLAGS`
CFLAGS=`$MKOCTFILE -p CFLAGS`


# Checks for compilers.
AC_PROG_F77([$F77 gfortran g77])
AC_PROG_CC([$CC gcc])

# Checks for libraries.
# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_FUNC_MALLOC
AC_CHECK_FUNCS([fprintf fflush])

# enter Fortran section
AC_LANG(Fortran 77)
AC_F77_WRAPPERS
# add some optimizations to GNU Fortran
if test x$F77 = xgfortran -o x$F77 = xg77 ; then
	FFLAGS="$FFLAGS -O2 -funroll-loops"
fi

# if LAPACK libs are not specified try to use BLAS_LIBS from mkoctfile
if test -z "$LAPACK_LIBS"; then
	echo -n "checking $MKOCTFILE for \$BLAS_LIBS... "
	LAPACK_LIBS=`$MKOCTFILE -p BLAS_LIBS`
	echo "$LAPACK_LIBS"
else
	echo "user specified LAPACK libs: $LAPACK_LIBS"
fi
LIBS="$LIBS $LAPACK_LIBS"

# check for external BLAS library routines
AC_SEARCH_LIBS(dtpsv,goto atlas blas)
AC_SEARCH_LIBS(dspr,goto atlas blas)
# check for external LAPACK library routines
# NOTE: BLAS should go first, so that it gets listed earlier. 
# many optimized blas libraries offer optimized xPOTRF
AC_SEARCH_LIBS(dpotrf,goto atlas lapack)
AC_SEARCH_LIBS(dpotrs,goto atlas lapack)
AC_SEARCH_LIBS(dpotri,goto atlas lapack)
AC_SEARCH_LIBS(dsyev,goto atlas lapack)

AC_CONFIG_HEADER([config.h])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
