dnl Process this file with autoconf to produce a configure script.
AC_INIT
AC_CONFIG_SRCDIR([fnmatch.c])		dnl A distinctive file to look for in srcdir.
AC_PREREQ(2.52)			dnl Minimum Autoconf version required.
AC_CONFIG_HEADER(config.h)
AC_PROG_CC
AC_CHECK_PROG(AR, ar, ar, ar)
AC_PROG_RANLIB
AC_PROG_CPP			dnl Later checks need this.
dnl These two want to come early.
AC_AIX
AC_MINIX
AC_ISC_POSIX
AC_C_CONST([])
AC_HEADER_STDC
AC_CHECK_HEADERS(memory.h unistd.h string.h)
AC_HEADER_DIRENT
AC_FUNC_CLOSEDIR_VOID
AC_FUNC_ALLOCA
AC_FUNC_STRCOLL
AH_BOTTOM([
#if (defined (_MSC_VER) || defined (__WIN32__)) && ! defined (_POSIX_VERSION)
#define WINDOWS32
#endif

#if defined (_MSC_VER)
#pragma warning (disable: 4996)
#endif
])
LIBPRE=lib
LIBEXT=a
case $build_alias in
  *-*-msdosmsvc)
    LIBPRE=
    LIBEXT=lib
    CFLAGS="-MD $CFLAGS"
    ;;
esac
AC_SUBST(LIBPRE)
AC_SUBST(LIBEXT)
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
